12 projects on portfolio page. contact page up and going.

--- a/src/utils/projects.json
+++ b/src/utils/projects.json
@@ -107,10 +107,10 @@
       "index":"8",
       "id": "0009",
       "name": "Node-Express-Handlebars",
-      "deploy": "https://github.com/jdhprogrammer/Node-Express-Handlebars_BurgerApp",
+      "deploy": "https://node-xprss-hndlbrs-burgerapp.herokuapp.com/",
       "image": "../../portfolio_images/jdh_portfolio_thumb_009.jpg",
       "alt": "Custom Burger Creation Application",
-      "repo": "https://node-xprss-hndlbrs-burgerapp.herokuapp.com/",
+      "repo": "https://github.com/jdhprogrammer/Node-Express-Handlebars_BurgerApp",
       "libraries": "",
       "languages": "",
       "description": "",
