--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -b main -d build",
-    "homepage": "https://jdhprgrammer.com",
+    "homepage": "https://jdhprogrammer.com",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
